--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/moment": "^2.13.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.17.2",
