--- a/back/package.json
+++ b/back/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@types/express": "^4.17.21",
     "@types/moment": "^2.13.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "moment": "^2.29.1",
-    "mongoose": "^6.1.8",
-    "needle": "^3.0.0"
+    "needle": "^3.0.0",
+    "prisma": "^5.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
