--- a/back/package.json
+++ b/back/package.json
@@ -13,13 +13,17 @@
     "@prisma/client": "^5.6.0",
     "@types/express": "^4.17.21",
     "@types/moment": "^2.13.0",
+    "@types/xml2js": "^0.4.14",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
+    "iconv-lite": "^0.6.3",
     "moment": "^2.29.1",
     "needle": "^3.0.0",
-    "prisma": "^5.6.0"
+    "prisma": "^5.6.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
